Kubernetes Essential Training Application Development/kube-ex/10/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
  labels:
    app: shell
spec:
  containers:
    - name: shell
      image: alpine:latest
      command: ["/bin/sh", "-c", "sleep 3600"]
