Kubernetes Essential Training Application Development/kube-ex/10/allow-blue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-blue
spec:
  podSelector:
    matchLabels:
      colour: blue
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: shell
      ports:
        - protocol: TCP
          port: 8080
